Separate statement class

--- a/db-gtk/Makefile
+++ b/db-gtk/Makefile
@@ -1,6 +1,7 @@
-NAME = db-gtk
 include ../common.mk
+NAME = db-gtk
 TARGET = $(LIB_DIR)/$(NAME).$(LIBEXT)
+OUTDIR = $(BUILD_DIR)/$(NAME)
 
 
 PACKAGES = \
@@ -16,21 +17,22 @@ all: $(TARGET)
 
 
 $(TARGET): *.vala $(VAPI_DIR)/db.vapi
-	rm -rf $(_BUILD_DIR)
-	mkdir -p $(_BUILD_DIR)
+	$(call print_target,"Building target 'db-gtk'")
+	rm -rf $(OUTDIR)
+	mkdir -p $(OUTDIR)
 	mkdir -p $(INCLUDE_DIR)
 	mkdir -p $(VAPI_DIR)
 	mkdir -p $(LIB_DIR)
-	cd $(_BUILD_DIR) && \
+	cd $(OUTDIR) && \
 		valac $(FLAGS) $(PACKAGES) --library=$(NAME) --use-header --header=$(NAME).h --Xcc="-I$(INCLUDE_DIR)" --Xcc="-DGETTEXT_PACKAGE=\"db-gtk\"" --compile $(CURDIR)/*.vala && \
 		$(AR) rcs $(TARGET) *.o
-	mv $(_BUILD_DIR)/$(NAME).h $(INCLUDE_DIR)
-	mv $(_BUILD_DIR)/$(NAME).vapi $(VAPI_DIR)
-	rm -f $(_BUILD_DIR)/*.o
+	mv $(OUTDIR)/$(NAME).h $(INCLUDE_DIR)
+	mv $(OUTDIR)/$(NAME).vapi $(VAPI_DIR)
+	rm -f $(OUTDIR)/*.o
 
 
 clean:
-	rm -rf $(_BUILD_DIR)
+	rm -rf $(OUTDIR)
 	rm -f $(VAPI_DIR)/$(NAME).vapi
 	rm -f $(INCLUDE_DIR)/$(NAME).h
 	rm -f $(TARGET)
